--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+android
+{
+    aaptOptions
+    {
+        cruncherEnabled = false
+    }
+}
